--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8398c1d6d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f85dea6f150&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f839896a550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8398961d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f85de78f990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f85de789d90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f83991e53d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f83991f16d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f85decf5610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f85dece9150&gt;]</pre>
 </div>
 
 </div>
