--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7522947f50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1955497550&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f75229acc90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f75229ace90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f19551b2c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f19554dde50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7522f15610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7522f15810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1955a87190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1955a47750&gt;]</pre>
 </div>
 
 </div>
