--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa21b6acf90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f336b5d92d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa21b6ddb10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa21b6ddd10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f336afc4fd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f336afa7210&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa21b926550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa21b926750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f336b852890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f336b852a90&gt;]</pre>
 </div>
 
 </div>
