--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcc8f557710&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbb670b0e10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcc8f58fdd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcc8f58ffd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbb66d96c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbb66d96e50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcc8fafc710&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcc8fafc910&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbb67301550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbb67301750&gt;]</pre>
 </div>
 
 </div>
