--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbb670b0e10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8cbafb8590&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbb66d96c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbb66d96e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8cbb297b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8cbb297d90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbb67301550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbb67301750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8cbbb28450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8cbbb28650&gt;]</pre>
 </div>
 
 </div>
