--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f69c0d35650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3626bfc750&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f69c0a4fc50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f69c0a4fe50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3626c35bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3626c35dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f69c0fbf450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f69c0fbf650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3626e7c490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3626e7c690&gt;]</pre>
 </div>
 
 </div>
