--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3626bfc750&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f959cce5b90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3626c35bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3626c35dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f959ca189d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f959ca0fe90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3626e7c490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3626e7c690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f959d294290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f959d2a0750&gt;]</pre>
 </div>
 
 </div>
