--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcd5b15be10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb7d6058a50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcd5ae55d10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcd5ae55f10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb7d664dc10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb7d664de10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcd5b3e1610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcd5b3e1810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb7d6bb7510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb7d6bb7710&gt;]</pre>
 </div>
 
 </div>
