--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff19f78fb10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fca03b6ba50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff19f4aecd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff19f4aeed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fca03563890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fca0388fed0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff19fd3f590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff19fd3f790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fca03e2ae90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fca03df5810&gt;]</pre>
 </div>
 
 </div>
