--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fca03b6ba50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe46a7d5c90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fca03563890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fca0388fed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe46a4db5d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe46a4f2f10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fca03e2ae90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fca03df5810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe46ad76150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe46ad827d0&gt;]</pre>
 </div>
 
 </div>
