--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd8c94edbd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc5a722db10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd8c3508d10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd8c38375d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc5a6f59c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc5a6f59ed0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd8c3a77550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd8c3a77750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc5a74c3550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc5a74c3790&gt;]</pre>
 </div>
 
 </div>
