--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa859e9fb10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1d46a99e50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa859ed8c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa859ed8e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1d4677fd90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1d4677ff90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa85a48f050&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa85a444750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1d46d21690&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1d46d21890&gt;]</pre>
 </div>
 
 </div>
