--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe22fb1ef90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc9f6eba410&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe22f79bc90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe22f79be90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc9f6bd9d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc9f6bd9f10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe22fd70610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe22fd70810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc9f71445d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc9f71447d0&gt;]</pre>
 </div>
 
 </div>
