--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f93d48d3190&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1df164dad0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f93d45eab50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f93d45ead50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1df1038c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1df1038e90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f93d4b524d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f93d4b526d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1df18c9610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1df18c9810&gt;]</pre>
 </div>
 
 </div>
