--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb04005bc90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe3eb2f9210&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb03fd5c3d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb03fd5c5d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe3ead32390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe3ead32590&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb0402d7c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb0402d7e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe3eb5ddc10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe3eb5dde10&gt;]</pre>
 </div>
 
 </div>
