--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe3eb2f9210&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f26ede7b950&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe3ead32390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe3ead32590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f26eded52d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f26eded54d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe3eb5ddc10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe3eb5dde10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f26ee445c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f26ee445e10&gt;]</pre>
 </div>
 
 </div>
