--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fce27659990&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f85137596d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fce276b5310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fce276b5510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f85137c45d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f85137c47d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fce27c22b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fce27c22d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8513d21e50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8513d2c090&gt;]</pre>
 </div>
 
 </div>
