--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f81017c85d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd2b4931d50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f81014d0310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f81014d0510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd2b3dee3d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd2b3dee610&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8101a4ab50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8101a4ad50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd2b4041cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd2b4041f10&gt;]</pre>
 </div>
 
 </div>
